--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
@@ -297,9 +297,31 @@
           </div>
           <div class="row position-required-skills-detail" id="preferred_skills"
             *ngIf="jobData.minimum_skills?.length > 0 || jobData.preferred_skills?.length > 0">
-            <h3>Preferred & Required Skills</h3><img class="question-icon" src="assets/icons/ic_question.svg"
-              (click)="openSkillDescriptionDialog()">
+
+            <div class="qualification-heading">
+              <h3>Preferred & Required Skills</h3>
+              <img class="question-icon" src="assets/icons/ic_question.svg"
+                (click)="openSkillDescriptionDialog()">
+            </div>
+
             <div class="education-level-m">
+                <div class="form-field search" [formGroup]="skillsSearchForm" autocomplete="off">
+                    <mat-form-field appearance="standard" class="search">
+                      <mat-icon matSuffix>search</mat-icon>
+                      <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
+                        formControlName="skills" >
+                      <mat-autocomplete #autocompleteSkills="matAutocomplete">
+                        <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill?.skill" (onSelectionChange)="addSkills(autocomplete_skill)">
+                          <span>{{autocomplete_skill.skill}}</span>
+                        </mat-option>
+                      </mat-autocomplete>
+                    </mat-form-field>
+                  </div>
+                  <div *ngIf="temp_skill" class="temp-skill">
+                      <simple-tag type="gray" title="{{temp_skill.skill}}" ellipseTag="true"  value="{{temp_skill.skill_level}}" >
+                      </simple-tag>
+                      <mat-icon (click)="editSkillDone()">cancel</mat-icon>
+                    </div>
               <h5 for="skill_required">Skills Required <span
                   *ngIf="jobData.minimum_skills?.length > 0">{{ jobData.minimum_skills?.length}}</span>
               </h5>
