--- a/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
+++ b/client/src/app/pages/application/application-detail/application-position-information/application-position-information.component.html
@@ -18,7 +18,8 @@
               <ul>
                 <li>
                   <img class="img-style" src="assets/icons/ic_company.svg">
-                  <span class="image" routerLink="../company-page/{{info.company_id}}">
+                  <span class="image" [routerLink]="['/company-info/']"
+                  [queryParams]="{id: info.company_id, tabIndex: 0, showBackButton: false}">
                     {{info.company_name}}</span>
                 </li>
                 <li>
@@ -295,78 +296,102 @@
               </li>
             </ul>
           </div>
+          <!-- skill section start -->
           <div class="row position-required-skills-detail" id="preferred_skills"
-            *ngIf="jobData.minimum_skills?.length > 0 || jobData.preferred_skills?.length > 0">
+          *ngIf="jobData.minimum_skills?.length > 0 || jobData.preferred_skills?.length > 0">
+          <div class="qualification-heading">
+            <h3>Preferred & Required Skills</h3>
+            <img class="question-icon" src="assets/icons/ic_question.svg"
+              (click)="openSkillDescriptionDialog()">
+          </div>
+          <div class="education-level-m">
 
-            <div class="qualification-heading">
-              <h3>Preferred & Required Skills</h3>
-              <img class="question-icon" src="assets/icons/ic_question.svg"
-                (click)="openSkillDescriptionDialog()">
+            <div *ngIf="jobData.minimum_skills?.length > 0" class="form-field search"
+              [formGroup]="requiredSkillsSearchForm">
+              <mat-form-field appearance="standard" class="search">
+                <mat-icon matSuffix>search</mat-icon>
+                <input matInput placeholder="Search required skills" type="text"
+                  [matAutocomplete]="autocompleteRequiredSkills" formControlName="required_skill">
+                <mat-autocomplete #autocompleteRequiredSkills="matAutocomplete">
+                  <mat-option *ngFor="let autocomplete_required_skill of autocomplete_required_skills"
+                    [value]="autocomplete_required_skill.skill"
+                    (onSelectionChange)="selectRequiredSkill(autocomplete_required_skill)">
+                    <span>{{autocomplete_required_skill.skill}}</span>
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
             </div>
 
-            <div class="education-level-m">
-                <div class="form-field search" [formGroup]="skillsSearchForm" autocomplete="off">
-                    <mat-form-field appearance="standard" class="search">
-                      <mat-icon matSuffix>search</mat-icon>
-                      <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
-                        formControlName="skills" >
-                      <mat-autocomplete #autocompleteSkills="matAutocomplete">
-                        <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill?.skill" (onSelectionChange)="addSkills(autocomplete_skill)">
-                          <span>{{autocomplete_skill.skill}}</span>
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field>
-                  </div>
-                  <div *ngIf="temp_skill" class="temp-skill">
-                      <simple-tag type="gray" title="{{temp_skill.skill}}" ellipseTag="true"  value="{{temp_skill.skill_level}}" >
-                      </simple-tag>
-                      <mat-icon (click)="editSkillDone()">cancel</mat-icon>
-                    </div>
-              <h5 for="skill_required">Skills Required <span
-                  *ngIf="jobData.minimum_skills?.length > 0">{{ jobData.minimum_skills?.length}}</span>
-              </h5>
-              <div *ngIf="jobData.minimum_skills; else noSkill">
-                <div class="skills" *ngIf="displayItemsLimit; let limit">
-                  <div class="skills-preferred-m" *ngFor="let min_skill of jobData.minimum_skills; let i = index; ">
-                    <simple-tag type="gray" *ngIf="i < limit" title="{{min_skill.skill}}" ellipseTag="true"
-                      value="{{min_skill.skill_level}}"
-                      [matTooltip]="SkillLevelDescription[min_skill.skill_level].title + SkillLevelDescription[min_skill.skill_level].description"
-                      [matTooltipShowDelay]=500>
-                    </simple-tag>
-                  </div>
-                  <img *ngIf="lessFlag && limit > displayItemsLimit" class="edu_img"
-                    (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg" alt="See Less">
-                  <img *ngIf="limit < jobData.minimum_skills?.length" class="edu_img"
-                    (click)="limit = limit + displayItemsLimit" (click)="lessFlag = true"
-                    src="assets/icons/ic_see_more.svg" alt="See More">
+            <div *ngIf="temp_required_skill" class="temp-skill">
+              <simple-tag type="gray" title="{{temp_required_skill.skill}}" ellipseTag="true"
+                value="{{temp_required_skill.skill_level}}">
+              </simple-tag>
+              <mat-icon (click)="skillsSearchDone(false)">cancel</mat-icon>
+            </div>
+
+            <h5 for="skill_required">Skills Required <span
+                *ngIf="jobData.minimum_skills?.length > 0">{{ jobData.minimum_skills?.length}}</span>
+            </h5>
+
+            <div *ngIf="jobData.minimum_skills; else noSkill">
+              <div class="skills" *ngIf="displayItemsLimit; let limit">
+                <div class="skills-preferred-m" *ngFor="let min_skill of jobData.minimum_skills; let i = index; ">
+                  <simple-tag type="gray" *ngIf="i < limit" title="{{min_skill.skill}}" ellipseTag="true"
+                    value="{{min_skill.skill_level}}" >
+                  </simple-tag>
                 </div>
+                <img *ngIf="limit < jobData.minimum_skills?.length" (click)="limit = limit + displayItemsLimit"
+                  src="assets/icons/ic_more.svg" alt="See More">
               </div>
-              <ng-template #noSkill>
-                <span>N/A</span>
-              </ng-template>
             </div>
-            <div class="education-level-m">
-              <h5 for="skill_required">Skills Preferred <span
-                  *ngIf="jobData.preferred_skills?.length > 0">{{ jobData.preferred_skills?.length}}</span>
-              </h5>
-              <div *ngIf="jobData.preferred_skills; else noSkill">
-                <div class="skills" *ngIf="displayItemsLimit; let limit">
-                  <div class="skills-preferred-m" *ngFor="let preskill of jobData.preferred_skills; let i = index;">
-                    <simple-tag *ngIf="i < limit" type="normal" title="{{preskill.skill}}" ellipseTag="true"
-                      value="{{preskill.skill_level}}"
-                      [matTooltip]="SkillLevelDescription[preskill.skill_level].title + SkillLevelDescription[preskill.skill_level].description"
-                      [matTooltipShowDelay]=500>
-                    </simple-tag>
-                  </div>
-                  <img *ngIf="lessFlag && limit > displayItemsLimit" class="edu_img"
-                    (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg" alt="See Less">
-                  <img *ngIf="limit < jobData.preferred_skills?.length" class="edu_img"
-                    (click)="limit = limit + displayItemsLimit" (click)="lessFlag = true"
-                    src="assets/icons/ic_see_more.svg" alt="See More">
+            <ng-template #noSkill>
+              <span>N/A</span>
+            </ng-template>
+          </div>
+
+          <div class="education-level-m">
+            <div *ngIf="jobData.preferred_skills?.length > 0" class="form-field search"
+              [formGroup]="preferredSkillsSearchForm">
+              <mat-form-field appearance="standard" class="search">
+                <mat-icon matSuffix>search</mat-icon>
+                <input matInput placeholder="Search preferred skills" type="text"
+                  [matAutocomplete]="autocompletePreferredSkills" formControlName="preferred_skill">
+                <mat-autocomplete #autocompletePreferredSkills="matAutocomplete">
+                  <mat-option *ngFor="let autocomplete_preferred_skill of autocomplete_preferred_skills"
+                    [value]="autocomplete_preferred_skill.skill"
+                    (onSelectionChange)="selectPreferredSkill(autocomplete_preferred_skill)">
+                    <span>{{autocomplete_preferred_skill.skill}}</span>
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </div>
+
+            <div *ngIf="temp_preferred_skill" class="temp-skill">
+              <simple-tag type="normal" title="{{temp_preferred_skill.skill}}" ellipseTag="true"
+                value="{{temp_preferred_skill.skill_level}}">
+              </simple-tag>
+              <mat-icon (click)="skillsSearchDone(true)">cancel</mat-icon>
+            </div>
+
+            <h5 for="skill_required">Skills Preferred <span
+                *ngIf="jobData.preferred_skills?.length > 0">{{ jobData.preferred_skills?.length}}</span>
+            </h5>
+
+            <div *ngIf="jobData.preferred_skills; else noSkill">
+              <div class="skills" *ngIf="displayItemsLimit; let limit">
+                <div class="skills-preferred-m" *ngFor="let preskill of jobData.preferred_skills; let i = index;">
+                  <simple-tag *ngIf="i < limit" type="normal" title="{{preskill.skill}}" ellipseTag="true"
+                    value="{{preskill.skill_level}}" >
+                  </simple-tag>
                 </div>
+
+                <img *ngIf="limit < jobData.preferred_skills?.length" (click)="limit = limit + displayItemsLimit"
+                  src="assets/icons/ic_more.svg" alt="See More">
               </div>
             </div>
           </div>
+        </div>
+          <!-- skills section end -->
           <div class="row position-required-skills-detail" id="interest"
             *ngIf="jobData.preferred_interests?.length > 0">
             <h3>Preferred Interests</h3>
