--- a/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
+++ b/client/src/app/pages/application/application-detail/profile-information/profile-information.component.html
@@ -283,11 +283,26 @@
 
 
           <div class="education-level-m">
-              <div class="form-field search" [formGroup]="skillsSearchForm" autocomplete="off">
+              <!-- <div" class="form-field search"
+                  [formGroup]="skillsSearchForm">
+                  <mat-form-field appearance="standard" class="search">
+                    <mat-icon matSuffix>search</mat-icon>
+                    <input matInput placeholder="Search skills" type="text"
+                      [matAutocomplete]="autocompleteSkills" formControlName="skills">
+                    <mat-autocomplete #autocompleteSkills="matAutocomplete">
+                      <mat-option *ngFor="let autocomplete_skill of autocomplete_skills"
+                        [value]="autocomplete_skill.skill"
+                        (onSelectionChange)="addSkills(autocomplete_skill)">
+                        <span>{{autocomplete_skill.skill}}</span>
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                </div> -->
+              <div class="form-field search" [formGroup]="skillsSearchForm" >
                   <mat-form-field appearance="standard" class="search">
                     <mat-icon matSuffix>search</mat-icon>
                     <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills"
-                      formControlName="skills" [value]="autocompleteSkills">
+                      formControlName="skills" >
                     <mat-autocomplete #autocompleteSkills="matAutocomplete">
                       <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill?.skill" (onSelectionChange)="addSkills(autocomplete_skill)">
                         <span>{{autocomplete_skill.skill}}</span>
