--- a/client/src/app/components/error-page/error-page.component.html
+++ b/client/src/app/components/error-page/error-page.component.html
@@ -7,6 +7,11 @@
         <p>You are not authorized to view this page.</p>
       </div>
 
+      <div *ngIf="statusCode === 403">
+        <h2>403 - Forbidden</h2>
+        <p>You don't have permission to view this page.</p>
+      </div>
+
       <div *ngIf="statusCode === 404">
         <h2>404 - Page Not Found</h2>
         <p>The page you are looking for might have been removed, had its name changed, or is otherwise unavailable.</p>
