CAR-000 Changed maybe to may be.

--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -667,7 +667,7 @@
 
         <div class="row">
           <h3>Criminal History</h3>
-          <p>If you have ever been convicted of a misdemeanor or felony offense please provide the following information. Infractions maybe excluded. If you have never been convicted of such an offense, please leave this section blank.</p>
+          <p>If you have ever been convicted of a misdemeanor or felony offense please provide the following information. Infractions may be excluded. If you have never been convicted of such an offense, please leave this section blank.</p>
 
           <ng-container *ngIf="criminalHistoriesData.length > 0">
             <mat-divider></mat-divider>
