--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.html
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.html
@@ -73,7 +73,7 @@
 
   <div *ngIf="criminalHistories" class="row" [class.edit-mode]="editMode">
     <h3>Criminal History</h3>
-    <p>If you have ever been convicted of a misdemeanor or felony offense please provide the following information. Infractions maybe excluded. If you have never been convicted of such an offense, please leave this section blank.</p>
+    <p>If you have ever been convicted of a misdemeanor or felony offense please provide the following information. Infractions may be excluded. If you have never been convicted of such an offense, please leave this section blank.</p>
 
     <mat-divider *ngIf="editMode || criminalHistories.length > 0"></mat-divider>
 
@@ -107,4 +107,3 @@
     <h4>Loading...</h4>
   </div>
 </ng-container>
-  
