--- a/client/src/app/pages/application/application-detail/application-template-information/application-template-information.component.html
+++ b/client/src/app/pages/application/application-detail/application-template-information/application-template-information.component.html
@@ -62,7 +62,7 @@
   <div *ngIf="criminalHistories" class="row">
     <h3>Criminal History</h3>
     <p>If you have ever been convicted of a misdemeanor or felony offense please provide the following information.
-      Infractions maybe excluded. If you have never been convicted of such an offense, please leave this section
+      Infractions may be excluded. If you have never been convicted of such an offense, please leave this section
       blank.</p>
 
     <ng-container *ngIf="criminalHistories.length > 0">
