Fix description indent issue

--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -372,6 +372,7 @@ a {
             line-height: 1.5;
             color: rgba(map-get($md-cfaccent, 500), .84);
             margin: 0;
+            text-indent: 0;
           }
           a {
             font-family: "Poppins", sans-serif;
