--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -52,6 +52,6 @@
     <h1>Dimitar Dimitrov</h1>
     <h2>Co-Founder and Senior Front End Manager</h2>
     <p>
-        A former employee of IBM and SLG, Dimitar Dimitrov is an extremely talented front end engineer who is responsible for overseeing the construction of many of this yourCareerFair’s front end resources.
+        A former employee of IBM and SLG, Dimitar Dimitrov is an extremely talented front end engineer who is responsible for overseeing the construction of many of yourCareerFair’s front end resources.
     </p>
 </div>
