--- a/client/src/app/pages/company/company-detail/company-detail.component.scss
+++ b/client/src/app/pages/company/company-detail/company-detail.component.scss
@@ -760,11 +760,18 @@ a {
           height: 20px;
         }
       }
+      .drop-buttons{
+        display: inline-block;
+      }
     }
     .career-main {
       .header-container {
         margin-top: 60px;
         margin-bottom: 0;
+
+        .tab-row {
+          display: none;
+        }
       }
 
       .main-container {
