--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -251,8 +251,8 @@
               <ul>
                 <li>
                   <img class="img-style" src="assets/icons/ic_company.svg">
-                  <span class="image"[routerLink]="['/company-info']"
-                  [queryParams]="{id: job.company_id, tabIndex: 0, showBackButton: false}">
+                  <span class="image" [routerLink]="['/company-info']"
+                    [queryParams]="{id: job.company_id, tabIndex: 0, showBackButton: false}">
                     {{job.company_name}}</span>
                 </li>
                 <li>
@@ -384,8 +384,8 @@
             <action-button type="text" title="{{!job.showMoreFlag ? 'Show More' :
                     'Show Less'}}" color="primary" (click)="job.showMoreFlag = !job.showMoreFlag"></action-button>
             &nbsp;&nbsp;
-            <action-button type="text" title="Go to Details Page" color="primary"
-            [routerLink]="['position-info']" [queryParams]="{id: job.position_id}" *ngIf="job.showMoreFlag"></action-button>
+            <action-button type="text" title="Go to Details Page" color="primary" [routerLink]="['position-info']"
+              [queryParams]="{id: job.position_id}" *ngIf="job.showMoreFlag"></action-button>
           </div>
         </div>
       </div>
