--- a/client/src/app/pages/positions/position-search/position-search.component.html
+++ b/client/src/app/pages/positions/position-search/position-search.component.html
@@ -374,8 +374,7 @@
               </div>
               <div class="jobdesc-space">
                 <h5>Job Description</h5>
-                <p>
-                  {{job.position_desc}}
+                <p>{{job.position_desc}}
                 </p>
               </div>
             </div>
