--- a/client/src/app/components/positions-details/positions-details.component.scss
+++ b/client/src/app/components/positions-details/positions-details.component.scss
@@ -327,16 +327,17 @@ $profile-form-field-mt: 30px;
           font-size: 14px;
           line-height: 22px;
           font-weight: 400;
-          max-height: 310px;
           width: 95%;
           -webkit-box-orient: vertical;
           display: block;
-          display: -webkit-box;
-          -webkit-line-clamp: 14;
-          overflow: hidden;
-          /* autoprefixer: ignore next */
+          white-space: pre-wrap;
+          &.short-desc{
+            max-height: 310px;
+            overflow: hidden;
+            /* autoprefixer: ignore next */
           -webkit-box-orient: vertical;
           text-overflow: ellipsis;
+          }
         }
 
         & .right-align {
