--- a/client/src/app/components/positions-details/positions-details.component.html
+++ b/client/src/app/components/positions-details/positions-details.component.html
@@ -360,19 +360,13 @@
         <div class="comman" *ngFor="let jobData of positionName" id="description">
           <div class="row position-interest-detail" *ngIf="jobData.position_desc">
             <h3>Job Description</h3>
-            <!-- <div class="position-matched" [ngClass]="{'skill-more-height': info.readMoreFlag}">
-              <p>{{jobData.position_desc }}</p>
-            </div>
-            <div class="position-job-desc-btn">
-              <action-button routerLink="."  type="text" title="{{!info.readMoreFlag ? 'Read More' :
-                  'Read Less'}}" color="primary" (click)="info.readMoreFlag = !info.readMoreFlag"></action-button>
-            </div> -->
             <ng-container *ngIf="true; let short_desc">
               <p *ngIf="jobData?.position_desc" class="description"
-                [class.short-desc]="short_desc && jobData?.position_desc?.length > helperService.shortDescLength">{{short_desc ? helperService.shortDescription(jobData.position_desc) : jobData.position_desc }}
+                [class.short-desc]="short_desc && jobData?.position_desc?.length > helperService.shortDescLength">
+                {{short_desc ? helperService.shortDescription(jobData.position_desc) : jobData.position_desc }}
               </p>
               <a *ngIf="jobData?.position_desc && jobData?.position_desc?.length > helperService.shortDescLength"
-                (click)="short_desc = !short_desc">{{short_desc ? 'Read More' : 'Read Less'}}</a>
+                (click)="short_desc = !short_desc"> {{short_desc ? 'Read More' : 'Read Less'}}</a>
             </ng-container>
           </div>
           <div class="row position-eductaion-detail position-required-skills-detail" id="qualification"
@@ -438,10 +432,10 @@
                 <h6 *ngIf="experience.industry_name">{{experience.industry_name}} ({{experience.preferred_years}}
                   years)</h6>
                 <div class="education-level-m">
-                  <!-- <p *ngIf="experience.exp_desc">{{experience.exp_desc}}</p> -->
                   <ng-container *ngIf="true; let short_desc">
                     <p *ngIf="experience?.exp_desc" class="description"
-                      [class.short-desc]="short_desc && experience?.exp_desc?.length > helperService.shortDescLength">{{short_desc ? helperService.shortDescription(experience.exp_desc) : experience.exp_desc }}
+                      [class.short-desc]="short_desc && experience?.exp_desc?.length > helperService.shortDescLength">
+                      {{short_desc ? helperService.shortDescription(experience.exp_desc) : experience.exp_desc }}
                     </p>
                     <a *ngIf="experience?.exp_desc && experience?.exp_desc?.length > helperService.shortDescLength"
                       (click)="short_desc = !short_desc">{{short_desc ? 'Read More' : 'Read Less'}}</a>
