--- a/client/src/app/pages/career-fairs/careerfair-info/careerfair-info.component.html
+++ b/client/src/app/pages/career-fairs/careerfair-info/careerfair-info.component.html
@@ -77,7 +77,7 @@
     </div>
     <div class="careerfair-bottam-detail">
       <ul>
-        <li><a (click)="navigateToCompanies()" [ngClass]="{'active': currentPage == 'companies'}">Companies</a></li>
+        <li><a (click)="navigateToCompanies()" [ngClass]="{'active': currentPage == 'company'}">Companies</a></li>
         <li>|</li>
         <li><a (click)="navigateToPositions()" [ngClass]="{'active': currentPage == 'positions'}">Positions</a></li>
       </ul>
@@ -88,7 +88,7 @@
 
   <!-- Career-fair Filter Card -->
   <div [formGroup]="careerFairForm" class="position-main-container"
-    *ngIf="currentPage === 'companies' && currentPage !== 'positions'">
+    *ngIf="currentPage === 'company' && currentPage !== 'positions'">
     <div class="filter-container container__header tablet" [class.open]="filter_list">
       <ng-container>
         <div class="nav-title">
@@ -228,7 +228,7 @@
 
   <!-- Carrer-fair positions Start -->
   <div [formGroup]="positionForm" class="position-main-container"
-    *ngIf="currentPage === 'positions' && currentPage !== 'companies'">
+    *ngIf="currentPage === 'positions' && currentPage !== 'company'">
     <div class="filter-container container__header tablet" [class.open]="filter_list">
       <ng-container>
         <div class="nav-title">
